<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.recu.Actividad1">

    <TextView android:id="@+id/lblsolicitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblsolicitud"
        android:textSize="24sp"/>
    <TextView android:id="@+id/lblnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/lblsolicitud"
        android:text="@string/lblnombre" />
    <EditText android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblsolicitud"
        android:layout_toRightOf="@id/lblnombre"
        android:inputType="text"/>
    <TextView android:id="@+id/lblcita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/txt1"
        android:text="@string/lblcita" />
    <RadioGroup android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblcita">

        <RadioButton android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"/>
        <RadioButton android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"/>
    </RadioGroup>
    <TextView android:id="@+id/lbldia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group1"
        android:text="@string/lbldia" />
    <Spinner android:id="@+id/spiner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbldia"/>
    <Button android:id="@+id/btnsolicitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btnsolicitar"
        android:layout_below="@+id/spiner1"
        android:onClick= "evaluar"/>
    <Button android:id="@+id/btnexit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/salir"
        android:layout_below="@+id/spiner1"
        android:onClick= "salir"/>
    <TextView android:id="@+id/lblmedicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsolicitar"
        android:text="@string/lblmedicos"/>
    <TextView android:id="@+id/lblenfermeras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:layout_toRightOf="@id/lblmedicos"
        android:layout_below="@+id/btnsolicitar"
        android:text="@string/lblenfermeras"/>
</RelativeLayout>
