<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.recu.Actividad1b">

    <TextView android:id="@+id/lblseleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblseleccion"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/lblnombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblseleccion"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/lblnombre2"/>
    <TextView android:id="@+id/lbldia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblnombre2"
        android:layout_centerHorizontal="true"
        android:text="@string/lbldia2" />
    <TextView android:id="@+id/lblcita2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbldia2"
        android:layout_centerHorizontal="true"
        android:text="@string/lblcita2"/>

    <Button android:id="@+id/btnrechazar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnrechazar"
        android:onClick= "rechazar"
        android:layout_below="@+id/lblcita2"
        android:layout_alignEnd="@+id/lbldia2" />

    <Button android:id="@+id/btnaceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnaceptar"
        android:onClick= "aceptar"
        android:layout_below="@+id/lblcita2"
        android:layout_toStartOf="@+id/btnrechazar" />
</RelativeLayout>
