<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.recu.MainActivity">

<Button android:id="@+id/btnexit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/salir"
    android:layout_centerVertical="true"
    android:onClick= "salir"/>
<Button android:id="@+id/btnact3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/act3"
    android:layout_above="@id/btnexit"
    android:onClick= "act3"/>
<Button android:id="@+id/btnact2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/act2"
    android:layout_above="@id/btnact3"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:onClick= "act2"/>
<Button android:id="@+id/btnact1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_above="@id/btnact2"
    android:text="@string/act1"
    android:onClick= "act1" />

</RelativeLayout>